# Drill-Pirate

./: LICENSE  README.md  pyproject.toml  requirements.txt
core/: accelerators.py  analysis.py  animation.py  assignment.py  coordinates.py  curvilinear.py  design_tools.py  diagnostics.py  drill_grid.py  models.py  playback.py  plugin_manager.py  svg_import.py  timing.py  user_errors.py  workflow.py
docs/: DRILL_CORRECTNESS.md  EXPORTS.md  FEATURES.md  INSTALLATION.md  KEYBOARD_SHORTCUTS.md  PLAYBACK_AUDIO_RELIABILITY.md  PLUGIN_DEVELOPMENT.md  PROJECT_FORMAT.md  RELEASE_AND_SUPPORT.md  RELEASE_NOTES_2.8.0.md  RELIABILITY_TESTING.md  ROADMAP.md  TROUBLESHOOTING.md  USER_GUIDE.md
drill_writer/: __init__.py  __main__.py  app.py  resources.py
drill_writer/core/: analysis.py  animation.py  assignment.py  audio_recovery.py  cad_paths.py  constraints.py  coordinates.py  diagnostics.py  (+16 more)
tests/: reliability_fixtures.py  soak_playback.py  test_advanced_design_tools.py  test_core_correctness.py  test_design_accelerators.py  test_direct_manipulation.py  test_director_notes.py  test_drill_correctness_p0.py  test_drill_grid.py  test_field_logo.py  test_field_text_theme.py  test_follow_leader.py  test_music_design.py  test_pdf_layout_designer.py  test_playback_audio_p0.py  test_prop_designer.py  test_reliability.py  test_specialized_design.py
ui/: advanced_design_tools.py  audio_devices.py  design_accelerators.py  field_logo.py  field_view.py  large_show_tools.py  main_window.py  music_design.py  preferences.py  prop_designer.py  specialized_design.py  startup.py  waveform.py
(+27 files in other folders)
